# site-shahu

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  humans.txt  pyproject.toml
.github/workflows/: deploy.yml
admin/: config.yml  index.html
content/: categories.yaml  site.yaml  sobre.yaml
content/products/: brinco-cocar-terra.md  brinco-de-arara.md  brinco-de-tear-de-arara.md  colar-japó.md  colar-tucum-ancestral.md  gravura-mae-terra.md  pulseira-rio-azul.md  vestido-grafismos-floresta.md
docs/: ARQUITETURA.md  CONTEUDO.md  DEPLOY.md  DESIGN.md
scripts/: build.py
src/shahu/: __init__.py  builder.py  config.py
src/shahu/catalog/: __init__.py  repository.py  service.py
src/shahu/content_pages/: __init__.py  service.py
src/shahu/domain/: __init__.py  category.py  content.py  product.py
src/shahu/rendering/: __init__.py  renderer.py
static/css/: theme.css
static/js/: cart.js  gallery.js  sidebar.js
templates/: base.html  collection.html  home.html  product.html  sobre.html
templates/partials/: cart.html  footer.html  header.html  icons.html  product_card.html  sidebar.html
tests/: test_build.py  test_catalog.py  test_domain.py
